--- a/client/src/components/Card/html.html
+++ b/client/src/components/Card/html.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdnjs.com/libraries/bulma">
+    <title>Document</title>
+</head>
+<body>
+    
+
+
 <div class="card">
     <div class="card-image">
         <figure class="image is-4by3">
@@ -6,12 +19,27 @@
     </div>
     <div class="card-content">
         <div class="media">
-            <div class="media-left"><figure class="image is-48x48">
-                <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
-              </figure></div>
+            <div class="media-left">
+                <ol>
+                    <li>
+                        <h2>
+                            Job Title
+                        </h2>
+                    </li>
+                    <li>
+
+                        <h3>
+                            Employer:
+                        </h3>
+                    </li>
+                </ol>
+            </div>
             <div class="media-right"><figure class="image is-48x48">
                 <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
               </figure></div>
         </div>
     </div>
 </div>
+
+</body>
+</html>
